--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,20 @@
+html {
+  box-sizing: border-box;
+}
+
+body {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03;
+}
+
+h1,
+h2,
+h3 {
+  margin-top: 0;
+}
+
 :root {
   --logo: #2196f3;
 }
@@ -16,12 +33,15 @@ header .logo {
   font-family: 'Raleway';
   font-size: 26px;
   font-weight: 700;
+  text-decoration: none;
+  margin-right: 93px;
+  line-height: 1.19;
 }
 span {
   color: var(--logo);
 }
 
-.container{
+.container {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -29,10 +49,30 @@ span {
   padding-right: 15px;
 }
 
+header nav {
+  display: inline-flex;
+  align-items: center;
+}
+
 header nav ul li {
   font-family: 'Roboto';
   font-size: 14px;
   font-weight: 500;
+  display: flex;
+}
+
+header nav ul li a {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+header nav ul {
+  display: flex;
+  margin-left: 50px;
 }
 
 header nav ul li :hover {
@@ -45,6 +85,11 @@ header .contacts li a {
   font-weight: 500;
   color: #757575;
   fill: #757575;
+  margin-left: 50;
+}
+
+header .contacts {
+  display: inline-flex;
 }
 
 header .contacts li :hover {
@@ -57,14 +102,39 @@ main .top {
   font-family: 'Roboto';
   font-size: 44px;
   font-weight: 700;
+  text-align: center;
+  padding-bottom: 200px;
+  padding-top: 200px;
   color: white;
 }
-button {
+
+main .top button {
   background-color: var(--logo);
   color: white;
   font-family: 'Roboto';
   font-size: 16px;
   font-weight: 700;
+  font-family: inherit;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  min-width: 200px;
+  min-height: 50px;
+  border: transparent;
+  border-radius: 4px;
+}
+
+main .top h1 {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  width: 1100px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 30px;
 }
 
 main .preferences ul li h3 {
@@ -92,6 +162,8 @@ main .specialisations h2 {
 
 main .specialisations ul li img {
   border-radius: 10px;
+  display: block;
+  height: auto;
 }
 
 main .team {
